crates/semantex-core/tests/snapshots/formatter_snapshot_test__snap_code_blocks_empty_content.snap
---
source: crates/semantex-core/tests/formatter_snapshot_test.rs
expression: out
---
No code blocks to display.
