crates/semantex-core/tests/snapshots/formatter_snapshot_test__snap_disambiguation_empty.snap
---
source: crates/semantex-core/tests/formatter_snapshot_test.rs
expression: base
---
existing output
