crates/semantex-core/tests/snapshots/formatter_snapshot_test__snap_graph_all_empty.snap
---
source: crates/semantex-core/tests/formatter_snapshot_test.rs
expression: out
---
No graph data found.
